--- a/VideoGameList/Views/Shared/_Layout.cshtml
+++ b/VideoGameList/Views/Shared/_Layout.cshtml
@@ -8,9 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <header class="jumbotron">
-            <h1>My Movies</h1>
-        </header>
+            <h1>My Video Games</h1>
     </div>
     @RenderBody()
 </body>
