--- a/VideoGameList/Views/Shared/_Layout.cshtml
+++ b/VideoGameList/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-            <h1>My Video Games</h1>
+            <h1>My Video Games List</h1>
     </div>
     @RenderBody()
 </body>
