--- a/VideoGameList/Views/Shared/_Layout.cshtml
+++ b/VideoGameList/Views/Shared/_Layout.cshtml
@@ -4,9 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
+    <!--
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+    -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
-<body>
+<body class="rgba(var(--bs-secondary-bg-rgb), .5)">
     <div class="container">
             <h1>My Video Games List</h1>
     </div>
