Dropped the table and created videoGame.cs to not require true or false values in wouldPlay Again. Also changed the seed data to include false and null wouldPlayAgain Values. Added Edit View with inputs for the name of the game, favorite character, and wouldPlayAgain. data is successfully adding to the data base when the add button is clicked. Updated index pages edit and delete buttons to pass the primary key id to the edit and delete pages. The model is now passed to the edit page when the user clicks on Update.

--- a/VideoGameList/Views/Home/Index.cshtml
+++ b/VideoGameList/Views/Home/Index.cshtml
@@ -24,8 +24,8 @@
                         <td>@videoGame.favoriteCharacter</td>
                         <td>Maybe</td>
                         <td>
-                        <input type="button" class="btn btn-light btn-outline-danger" value="Delete" onclick="location.href='@Url.Action("Delete", "VideoGame")'" />
-                        <input type="button" class="btn btn-light btn-outline-info" value="Update" onclick="location.href='@Url.Action("Edit", "VideoGame")'" />
+                        <input type="button" class="btn btn-light btn-outline-danger" value="Delete" onclick="location.href='@Url.Action("Delete", "VideoGame")/@videoGame.videoGameId'" />
+                        <input type="button" class="btn btn-light btn-outline-info" value="Update" onclick="location.href='@Url.Action("Edit", "VideoGame")/@videoGame.videoGameId'" />
                         </td>
                     </tr>
                     }
@@ -36,8 +36,8 @@
                         <td>@videoGame.favoriteCharacter</td>
                         <td>Yes</td>
                         <td>
-                        <input type="button" class="btn btn-light btn-outline-danger" value="Delete" onclick="location.href='@Url.Action("Delete", "VideoGame")'" />
-                        <input type="button" class="btn btn-light btn-outline-info" value="Update" onclick="location.href='@Url.Action("Edit", "VideoGame")'" />
+                        <input type="button" class="btn btn-light btn-outline-danger" value="Delete" onclick="location.href='@Url.Action("Delete", "VideoGame")/@videoGame.videoGameId'" />
+                        <input type="button" class="btn btn-light btn-outline-info" value="Update" onclick="location.href='@Url.Action("Edit", "VideoGame")/@videoGame.videoGameId'" />
                         </td>
                     </tr>
                     }
@@ -48,8 +48,8 @@
                         <td>@videoGame.favoriteCharacter</td>
                         <td>No</td>
                         <td>
-                        <input type="button" class="btn btn-light btn-outline-danger" value="Delete" onclick="location.href='@Url.Action("Delete", "VideoGame")'" />
-                        <input type="button" class="btn btn-light btn-outline-info" value="Update" onclick="location.href='@Url.Action("Edit", "VideoGame")'" />
+                        <input type="button" class="btn btn-light btn-outline-danger" value="Delete" onclick="location.href='@Url.Action("Delete", "VideoGame")/@videoGame.videoGameId'" />
+                        <input type="button" class="btn btn-light btn-outline-info" value="Update" onclick="location.href='@Url.Action("Edit", "VideoGame")/@videoGame.videoGameId'" />
                         </td>
                     </tr>
                     }
