Added Delete cshtml. changed edit.cshtml's select element to have the multiple attribute. Removed site.css. records are not able to be deleted from the database.

--- a/VideoGameList/Views/VideoGame/Edit.cshtml
+++ b/VideoGameList/Views/VideoGame/Edit.cshtml
@@ -18,7 +18,8 @@
     </div>
 
     <div class="mb-3">
-        <select asp-for="wouldPlayAgain" class="form-control">
+        <label asp-for="wouldPlayAgain">Would you play it again?</label>
+        <select asp-for="wouldPlayAgain" class="form-select" multiple>
             <option value="true">Yes</option>
             <option value="false">No</option>
             <option value="@DBNull.Value">Maybe</option>
