--- a/VideoGameList/Views/VideoGame/Delete.cshtml
+++ b/VideoGameList/Views/VideoGame/Delete.cshtml
@@ -1,1 +1,13 @@
-﻿this is delete
+﻿@model videoGame
+@{
+    ViewBag.Title = "Delete Video Game";
+}
+<h2 class="text-center">Confirm Deletion</h2>
+<h3 class="text-center">@Model.name</h3>
+<form class="text-center" asp-action="Delete" method="post">
+    <input type="hidden" asp-for="videoGameId" />
+    <button type="submit" class="btn btn-danger">Delete</button>
+    <a asp-controller="Home" asp-action="Index"
+       class="btn btn-info">Cancel</a>
+
+</form>
