--- a/VideoGameList/Views/Home/Index.cshtml
+++ b/VideoGameList/Views/Home/Index.cshtml
@@ -2,8 +2,16 @@
 @{
     ViewBag.Title = "My Video Games";
 }
+<!--
+Author Dustin Gregerson
+Date 10/15/2023
+Description:
+Gets the list of all the video games in the data base table and displays them in the browser.
+Each record is accompanied by two buttons one to update and one to delete the record.
+At the bottom of the page is a add button to add a new game to the database.
 
 
+-->
 <table class="table table-sm table-dark table-striped table-bordered table-hover">
     <thead>
         <tr>
