--- a/VideoGameList/Views/Shared/_Layout.cshtml
+++ b/VideoGameList/Views/Shared/_Layout.cshtml
@@ -1,5 +1,13 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+<!--
+Author Dustin Gregerson
+Date 10/15/2023
+Description:
+Creates the default layout of all the pages.
+
+
+-->
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
